Actualización en Vista

--- a/vistas/index.html
+++ b/vistas/index.html
@@ -24,8 +24,8 @@
         <!-- Materia -->
         <label>Materia:</label>
         <div class="materias">
-            <button type="button">BDD</button>
-            <button type="button">Administracion de BDD</button>
+            <button type="button">Base de Datos</button>
+            <button type="button">Administracion de Base de Datos</button>
             <button type="button">Ofimantica</button>
         </div>
 		<br>
